update API,to generate answer
